.metadata/.plugins/org.eclipse.cdt.ui/QT.build.log
13:52:29 **** Incremental Build of configuration Debug for project QT ****
make all 
Building file: ../src/QT.cpp
Invoking: Cross G++ Compiler
g++ -I"/n/no_backup/park/elim/kyu/eclipse/workspaces/genomics/bamtools/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/QT.d" -MT"src/QT.o" -o "src/QT.o" "../src/QT.cpp"
Finished building: ../src/QT.cpp
 
Building file: ../src/ReadClipper.cpp
Invoking: Cross G++ Compiler
g++ -I"/n/no_backup/park/elim/kyu/eclipse/workspaces/genomics/bamtools/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/ReadClipper.d" -MT"src/ReadClipper.o" -o "src/ReadClipper.o" "../src/ReadClipper.cpp"
../src/ReadClipper.cpp: In static member function ‘static bool QT::ReadClipper::clip_read(std::string&)’:
../src/ReadClipper.cpp:39:7: warning: ‘auto’ changes meaning in C++11; please remove it [-Wc++0x-compat]
   for(auto& a_cigar : al.CigarData) {
       ^
../src/ReadClipper.cpp:39:13: error: ISO C++ forbids declaration of ‘a_cigar’ with no type [-fpermissive]
   for(auto& a_cigar : al.CigarData) {
             ^
../src/ReadClipper.cpp:39:23: error: range-based ‘for’ loops are not allowed in C++98 mode
   for(auto& a_cigar : al.CigarData) {
                       ^
../src/ReadClipper.cpp:40:24: error: request for member ‘Type’ in ‘a_cigar’, which is of non-class type ‘int’
    char type = a_cigar.Type;
                        ^
../src/ReadClipper.cpp:41:26: error: request for member ‘Length’ in ‘a_cigar’, which is of non-class type ‘int’
    int64_t len = a_cigar.Length;
                          ^
../src/ReadClipper.cpp:36:11: warning: unused variable ‘len’ [-Wunused-variable]
   int64_t len = bases.length();
           ^
make: *** [src/ReadClipper.o] Error 1

13:52:31 Build Finished (took 1s.605ms)

